--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.shlifedev.ugs": "https://github.com/shlifedev/uni-google-sheets.git?path=src/",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
